--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
